--- a/feretui/locale/feretui.pot
+++ b/feretui/locale/feretui.pot
@@ -1,8 +1,24 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.0.1\n"
-"POT-Creation-Date: 2024-01-04T15:10:50.520590\n"
+"Project-Id-Version: 0.0.0\n"
+"POT-Creation-Date: 2024-01-26T23:20:38.961581\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgctxt "template:feretui-client"
+msgid "FeretUI"
+msgstr ""
+
+msgctxt "template:feretui-client"
+msgid "Hello My feret"
+msgstr ""
+
+msgctxt "template:feretui-client-footer"
+msgid "feretUI"
+msgstr ""
+
+msgctxt "template:feretui-client-footer"
+msgid "by Js Suzanne."
+msgstr ""
