Add Form base to translate and widget (#18)
* Add Form base to translate and widget
* Improved unitest
* Updated documentation

--- a/feretui/locale/fr.po
+++ b/feretui/locale/fr.po
@@ -3,33 +3,39 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.1\n"
 "POT-Creation-Date: 2024-03-15T22:27:21.141910\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 3.2.2\n"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "Not a valid integer value."
-msgstr ""
+msgstr "N'est pas un entier valide."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "Not a valid decimal value."
-msgstr ""
+msgstr "N'est pas un nombre valide."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "Not a valid float value."
-msgstr ""
+msgstr "N'est pas un nombre valide."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "Not a valid datetime value."
-msgstr ""
+msgstr "N'est pas une date / heure valide."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "Not a valid date value."
-msgstr ""
+msgstr "N'est pas une date valide."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "Not a valid time value."
-msgstr ""
+msgstr "N'est pas une heure valide."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "Not a valid week value."
@@ -233,79 +239,79 @@ msgstr ""
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "This field contains invalid JSON"
-msgstr ""
+msgstr "Ce champs contient un JSON invalide"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "The password should have {msg}."
-msgstr ""
+msgstr "Le mot de passe doit contenir {msg}."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "more than {min_size} caractere"
-msgstr ""
+msgstr "plus de {min_size} caractères"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "less than {max_size} caractere"
-msgstr ""
+msgstr "moins de {max_size} caractères"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "with lowercase"
-msgstr ""
+msgstr "avec des minuscules"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "without lowercase"
-msgstr ""
+msgstr "sans minuscules"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "with uppercase"
-msgstr ""
+msgstr "avec des majuscules"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "without uppercase"
-msgstr ""
+msgstr "sans majuscules"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "with letters"
-msgstr ""
+msgstr "avec des lettres"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "without letters"
-msgstr ""
+msgstr "sans lettres"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "with digits"
-msgstr ""
+msgstr "avec des chiffres"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "without digits"
-msgstr ""
+msgstr "sans chiffres"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "with symbols"
-msgstr ""
+msgstr "avec des caractères spéciaux"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "without symbols"
-msgstr ""
+msgstr "sans caractères spéciaux"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "with spaces"
-msgstr ""
+msgstr "avec des espaces"
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "without spaces"
-msgstr ""
+msgstr "sans espaces"
 
 msgctxt "template:feretui-client-header:a:data-tooltip"
 msgid "Go to the homepage"
-msgstr ""
+msgstr "Aller à la page d'accueil"
 
 msgctxt "template:feretui-client-footer"
 msgid "FeretUI"
-msgstr ""
+msgstr "FeretUI"
 
 msgctxt "template:feretui-client-footer"
 msgid "by Js Suzanne."
-msgstr ""
+msgstr "par Jean-Sébastien Suzanne."
 
 msgctxt "template:feretui-tooltip:span:data-tooltip"
 msgid "{{ tooltip }}"
@@ -317,7 +323,7 @@ msgstr ""
 
 msgctxt "template:feretui-input-field"
 msgid "required"
-msgstr ""
+msgstr "requis"
 
 msgctxt "template:feretui-input-field"
 msgid ")"
@@ -325,31 +331,31 @@ msgstr ""
 
 msgctxt "template:feretui-page-404"
 msgid "Page not found"
-msgstr ""
+msgstr "Page non trouvée"
 
 msgctxt "template:feretui-page-404"
 msgid "The page \""
-msgstr ""
+msgstr "La page \""
 
 msgctxt "template:feretui-page-404"
 msgid "\" is not a declared page"
-msgstr ""
+msgstr "\" n'est pas déclarée"
 
 msgctxt "template:feretui-page-forbidden"
 msgid "This page is forbidden"
-msgstr ""
+msgstr "Cette page n'est pas autorisée"
 
 msgctxt "template:feretui-page-forbidden"
 msgid "The page \""
-msgstr ""
+msgstr "La page \""
 
 msgctxt "template:feretui-page-forbidden"
 msgid "\" is forbidden."
-msgstr ""
+msgstr "\" n'est pas autorisée."
 
 msgctxt "template:feretui-page-homepage"
 msgid "Welcome to the FeretUI's client"
-msgstr ""
+msgstr "Bienvenue sur le client FeretUI"
 
 msgctxt "template:feretui-page-homepage"
 msgid "Small and modular web client to administrate your service"
