--- a/feretui/locale/feretui.pot
+++ b/feretui/locale/feretui.pot
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.1\n"
-"POT-Creation-Date: 2024-03-15T22:27:21.141910\n"
+"POT-Creation-Date: 2024-03-21T11:16:56.453124\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -299,28 +299,16 @@ msgctxt "template:feretui-client-header:a:data-tooltip"
 msgid "Go to the homepage"
 msgstr ""
 
+msgctxt "template:feretui-client-header"
+msgid "Log out"
+msgstr ""
+
 msgctxt "template:feretui-client-footer"
 msgid "FeretUI"
 msgstr ""
 
 msgctxt "template:feretui-client-footer"
 msgid "by Js Suzanne."
-msgstr ""
-
-msgctxt "template:feretui-tooltip:span:data-tooltip"
-msgid "{{ tooltip }}"
-msgstr ""
-
-msgctxt "template:feretui-input-field"
-msgid "("
-msgstr ""
-
-msgctxt "template:feretui-input-field"
-msgid "required"
-msgstr ""
-
-msgctxt "template:feretui-input-field"
-msgid ")"
 msgstr ""
 
 msgctxt "template:feretui-page-404"
@@ -353,4 +341,56 @@ msgstr ""
 
 msgctxt "template:feretui-page-homepage"
 msgid "Small and modular web client to administrate your service"
+msgstr ""
+
+msgctxt "template:feretui-page-login"
+msgid "Log in"
+msgstr ""
+
+msgctxt "template:feretui-page-signup"
+msgid "Register a new user"
+msgstr ""
+
+msgctxt "template:feretui-page-signup"
+msgid "Sign up"
+msgstr ""
+
+msgctxt "template:feretui-input-label"
+msgid "("
+msgstr ""
+
+msgctxt "template:feretui-input-label"
+msgid "required"
+msgstr ""
+
+msgctxt "template:feretui-input-label"
+msgid ")"
+msgstr ""
+
+msgctxt "form:feretui.session:LoginForm:field:login:label"
+msgid "Login"
+msgstr ""
+
+msgctxt "form:feretui.session:LoginForm:field:password:label"
+msgid "Password"
+msgstr ""
+
+msgctxt "form:feretui.session:SignUpForm:field:lang:label"
+msgid "Language"
+msgstr ""
+
+msgctxt "form:feretui.session:SignUpForm:field:lang:choice:en:label"
+msgid "English"
+msgstr ""
+
+msgctxt "form:feretui.session:SignUpForm:field:login:label"
+msgid "Login"
+msgstr ""
+
+msgctxt "form:feretui.session:SignUpForm:field:password:label"
+msgid "Password"
+msgstr ""
+
+msgctxt "form:feretui.session:SignUpForm:field:password_confirm:label"
+msgid "Password Confirm"
 msgstr ""
