--- a/feretui/locale/feretui.pot
+++ b/feretui/locale/feretui.pot
@@ -1,8 +1,8 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.1.0\n"
-"POT-Creation-Date: 2024-04-15T13:55:51.124307\n"
+"Project-Id-Version: 0.2.0\n"
+"POT-Creation-Date: 2024-06-25T09:21:00.490710\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -295,12 +295,28 @@ msgctxt "form:feretui.form:FeretUIForm"
 msgid "without spaces"
 msgstr ""
 
+msgctxt "template:feretui-client-header:nav:aria-label"
+msgid "main navigation"
+msgstr ""
+
 msgctxt "template:feretui-client-header:a:data-tooltip"
 msgid "Go to the homepage"
 msgstr ""
 
 msgctxt "template:feretui-client-header"
+msgid "Go to the homepage"
+msgstr ""
+
+msgctxt "template:feretui-client-header:a:aria-label"
+msgid "menu"
+msgstr ""
+
+msgctxt "template:feretui-client-header"
 msgid "Log out"
+msgstr ""
+
+msgctxt "template:feretui-client-footer"
+msgid "Sitemap"
 msgstr ""
 
 msgctxt "template:feretui-client-footer"
@@ -341,6 +357,30 @@ msgstr ""
 
 msgctxt "template:feretui-page-homepage"
 msgid "Small and modular web client to administrate your service"
+msgstr ""
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Sitemap"
+msgstr ""
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Main"
+msgstr ""
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Homepage"
+msgstr ""
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Authentications"
+msgstr ""
+
+msgctxt "template:feretui-page-sitemap"
+msgid "User"
+msgstr ""
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Log out"
 msgstr ""
 
 msgctxt "template:feretui-page-login"
@@ -405,6 +445,18 @@ msgstr ""
 
 msgctxt "template:view-goto-edit-cancel-button"
 msgid "Cancel"
+msgstr ""
+
+msgctxt "template:view-pagination"
+msgid "Selected"
+msgstr ""
+
+msgctxt "template:view-pagination"
+msgid "Previous"
+msgstr ""
+
+msgctxt "template:view-pagination"
+msgid "Next"
 msgstr ""
 
 msgctxt "template:view-filter"
