--- a/feretui/locale/fr.po
+++ b/feretui/locale/fr.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.1\n"
-"POT-Creation-Date: 2024-04-15T13:55:51.124307\n"
+"POT-Creation-Date: 2024-06-25T09:21:00.490710\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -55,7 +55,9 @@ msgstr "N'est pas une choix valide."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "Invalid choice(s): one or more data inputs could not be coerced."
-msgstr "Choix invalide(s) : une ou plusieurs entrées de données n'ont pas pu être forcées."
+msgstr ""
+"Choix invalide(s) : une ou plusieurs entrées de données n'ont pas pu être "
+"forcées."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "'%(value)s' is not a valid choice for this field."
@@ -207,7 +209,9 @@ msgstr "Ce n'est pas une couleur valide."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "Invalid choice(s): one or more data inputs could not be coerced"
-msgstr "Choix invalide(s) : une ou plusieurs entrées de données n'ont pas pu être forcées."
+msgstr ""
+"Choix invalide(s) : une ou plusieurs entrées de données n'ont pas pu être "
+"forcées."
 
 msgctxt "form:feretui.form:FeretUIForm"
 msgid "'%(value)s' is not a valid choice for this field"
@@ -301,13 +305,29 @@ msgctxt "form:feretui.form:FeretUIForm"
 msgid "without spaces"
 msgstr "sans espaces"
 
+msgctxt "template:feretui-client-header:nav:aria-label"
+msgid "main navigation"
+msgstr "Somaire"
+
 msgctxt "template:feretui-client-header:a:data-tooltip"
 msgid "Go to the homepage"
 msgstr "Aller à la page d'accueil"
 
 msgctxt "template:feretui-client-header"
+msgid "Go to the homepage"
+msgstr "Aller à la page d'accueil"
+
+msgctxt "template:feretui-client-header:a:aria-label"
+msgid "menu"
+msgstr "Menu"
+
+msgctxt "template:feretui-client-header"
 msgid "Log out"
 msgstr "Se déconnecter"
+
+msgctxt "template:feretui-client-footer"
+msgid "Sitemap"
+msgstr "Plan du site"
 
 msgctxt "template:feretui-client-footer"
 msgid "FeretUI"
@@ -348,6 +368,30 @@ msgstr "Bienvenue sur le client FeretUI"
 msgctxt "template:feretui-page-homepage"
 msgid "Small and modular web client to administrate your service"
 msgstr "Petit client web pour administrer votre service"
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Sitemap"
+msgstr "Plan du site"
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Main"
+msgstr "Somaire"
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Homepage"
+msgstr "Page principale"
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Authentications"
+msgstr "Authentifications"
+
+msgctxt "template:feretui-page-sitemap"
+msgid "User"
+msgstr "Utilisateur"
+
+msgctxt "template:feretui-page-sitemap"
+msgid "Log out"
+msgstr "Se déconnecter"
 
 msgctxt "template:feretui-page-login"
 msgid "Log in"
@@ -412,6 +456,18 @@ msgstr "Annuler"
 msgctxt "template:view-goto-edit-cancel-button"
 msgid "Cancel"
 msgstr "Annuler"
+
+msgctxt "template:view-pagination"
+msgid "Selected"
+msgstr "Sélectionné"
+
+msgctxt "template:view-pagination"
+msgid "Previous"
+msgstr "Précédent"
+
+msgctxt "template:view-pagination"
+msgid "Next"
+msgstr "Suivant"
 
 msgctxt "template:view-filter"
 msgid "Filter"
